--- a/Makefile.in
+++ b/Makefile.in
@@ -1,7 +1,10 @@
-.PHONY	: all install clean tags
+.PHONY	: all install clean tags dist
 
 all: tags
 	${PYTHON_EXE} setup.py build
+
+dist:
+	${PYTHON_EXE} setup.py sdist
 
 install: tags
 	${PYTHON_EXE} setup.py install
