--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,7 @@
+include LICENSE
+
+include ez_setup.py
 include configure
 include Makefile.in
-include LICENSE
+include aksetup_helper.py
+include README_SETUP.txt
