--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include LICENSE
 
-include ez_setup.py
+include distribute_setup.py
 include configure.py
 include Makefile.in
 include aksetup_helper.py
