Fix Github CI config for examples run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,5 @@ jobs:
         -   name: "Main Script"
             run: |
                 curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/prepare-and-run-flake8.sh
-                . ./prepare-and-run-flake8.sh  "$(basename $GITHUB_REPOSITORY) examples"
+                . ./prepare-and-run-flake8.sh  "$(basename $GITHUB_REPOSITORY)" examples
 
