Fix ci-support Giltab CI typo

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ Documentation:
     EXTRA_INSTALL="numpy"
     curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/ci-support.sh
     . ./ci-support.sh
-    build_project_in_venv
+    build_py_project_in_venv
     build_docs --no-check
   tags:
   - python3
