--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
 
                 curl -L -O https://wci.llnl.gov/content/assets/docs/simulation/computer-codes/silo/silo-4.10.2/silo-4.10.2-bsd-smalltest.tar.gz
                 tar xvfz silo-4.10.2-bsd-smalltest.tar.gz
-                sudo cp silo-4.10.2-bsd/src/silo/silo_exports.h /usr/include/silo
+                sudo cp silo-4.10.2-bsd/src/silo/silo_exports.h /usr/include
 
                 EXTRA_INSTALL="numpy pybind11"
                 ./configure.py --use-silo
