--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
                 curl -L -O https://wci.llnl.gov/content/assets/docs/simulation/computer-codes/silo/silo-4.10.2/silo-4.10.2-bsd-smalltest.tar.gz
                 tar xfz silo-4.10.2-bsd-smalltest.tar.gz
                 sudo cp silo-4.10.2-bsd/src/silo/silo_exports.h /usr/include
-                ls /usr/include | grep silo
+                sudo chmod a+rX /usr/include/silo_exports.h
 
                 EXTRA_INSTALL="numpy pybind11"
                 ./configure.py --use-silo
