--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-ignore = E126,E127,E128,E123,E226,E241,E242,W503,E402
+ignore = E124,E126,E127,E128,E123,E226,E241,E242,W503,E402
 max-line-length=85
 
 inline-quotes = "
