--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,15 +36,53 @@ jobs:
                 python-version: ${{ matrix.python-version }}
         -   name: "Main Script"
             run: |
-                sudo apt update
-                sudo apt install libsilo-dev
-
-                curl -L -O https://wci.llnl.gov/content/assets/docs/simulation/computer-codes/silo/silo-4.10.2/silo-4.10.2-bsd-smalltest.tar.gz
-                tar xfz silo-4.10.2-bsd-smalltest.tar.gz
-                sudo cp silo-4.10.2-bsd/src/silo/silo_exports.h /usr/include
-                sudo chmod a+rX /usr/include/silo_exports.h
-
+                ./.ci/install-silo-on-github.sh
                 EXTRA_INSTALL="numpy pybind11"
                 ./configure.py --use-silo
-                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/build-and-test-py-project.sh
-                . ./build-and-test-py-project.sh
+                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/ci-support.sh
+                . ./ci-support.sh
+                build_py_project_in_venv
+                test_py_project
+
+    examples:
+        name: Examples on Py${{ matrix.python-version }}
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                python-version: [3.6, 3.x]
+        steps:
+        -   uses: actions/checkout@v2
+        -
+            uses: actions/setup-python@v1
+            with:
+                python-version: ${{ matrix.python-version }}
+        -   name: "Main Script"
+            run: |
+                ./.ci/install-silo-on-github.sh
+                EXTRA_INSTALL="numpy pybind11"
+                ./configure.py --use-silo
+                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/ci-support.sh
+                . ./ci-support.sh
+                build_py_project_in_venv
+                run_examples
+
+    docs:
+        name: Documentation
+        runs-on: ubuntu-latest
+        steps:
+        -   uses: actions/checkout@v2
+        -
+            uses: actions/setup-python@v1
+            with:
+                python-version: '3.x'
+        -   name: "Main Script"
+            run: |
+                ./.ci/install-silo-on-github.sh
+                EXTRA_INSTALL="numpy pybind11"
+                ./configure.py --use-silo
+                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/ci-support.sh
+                . ./ci-support.sh
+                build_py_project_in_venv
+                build_docs
+
+# vim: sw=4
