--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,10 +11,14 @@ Python 3:
   script: |
     sudo apt update
     sudo apt install libsilo-dev
+
+    curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/ci-support.sh
+    . ./ci-support.sh
     ./configure.py --use-silo
+
     EXTRA_INSTALL="numpy pybind11"
-    curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/build-and-test-py-project.sh
-    . ./build-and-test-py-project.sh
+    build_py_project_in_venv
+    test_py_project
   tags:
   - docker-runner
   except:
@@ -31,10 +35,11 @@ Examples:
     # not expected to run without matplotlib and vtk
     rm examples/vtk-sample-elements.py
 
-    ./configure.py --use-silo
-    EXTRA_INSTALL="numpy pybind11"
     curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/ci-support.sh
     . ./ci-support.sh
+    ./configure.py --use-silo
+
+    EXTRA_INSTALL="numpy pybind11"
     build_py_project_in_venv
     run_examples
   tags:
@@ -44,9 +49,14 @@ Examples:
 
 Documentation:
   script: |
-    EXTRA_INSTALL="numpy"
+    sudo apt update
+    sudo apt install libsilo-dev
+
     curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/ci-support.sh
     . ./ci-support.sh
+    ./configure.py --use-silo
+
+    EXTRA_INSTALL="numpy pybind11"
     build_py_project_in_venv
     build_docs
     maybe_upload_docs
