--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 on:
     push:
         branches:
-        - master
+        - main
     pull_request:
     schedule:
         - cron:  '17 3 * * 0'
@@ -19,7 +19,7 @@ jobs:
                 python-version: '3.x'
         -   name: "Main Script"
             run: |
-                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/prepare-and-run-flake8.sh
+                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/main/prepare-and-run-flake8.sh
                 . ./prepare-and-run-flake8.sh  "$(basename $GITHUB_REPOSITORY)" test examples
 
     pytest:
@@ -39,7 +39,7 @@ jobs:
             run: |
                 ./.ci/install-silo-on-github.sh
                 EXTRA_INSTALL="numpy pybind11"
-                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/ci-support.sh
+                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/main/ci-support.sh
                 . ./ci-support.sh
                 ./configure.py --use-silo
                 build_py_project_in_venv
@@ -64,7 +64,7 @@ jobs:
 
                 ./.ci/install-silo-on-github.sh
                 EXTRA_INSTALL="numpy pybind11"
-                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/ci-support.sh
+                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/main/ci-support.sh
                 . ./ci-support.sh
                 ./configure.py --use-silo
                 build_py_project_in_venv
@@ -83,7 +83,7 @@ jobs:
             run: |
                 ./.ci/install-silo-on-github.sh
                 EXTRA_INSTALL="numpy pybind11"
-                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/ci-support.sh
+                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/main/ci-support.sh
                 . ./ci-support.sh
                 ./configure.py --use-silo
                 build_py_project_in_venv
