--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,10 @@ jobs:
                 . ./ci-support.sh
                 ./configure.py --use-silo
                 build_py_project_in_venv
+
+                # https://github.com/sphinx-doc/sphinx/issues/9200
+                CI_SUPPORT_SPHINX_VERSION_SPECIFIER="!=4.0.0"
+
                 build_docs
 
 # vim: sw=4
