--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,6 +58,10 @@ Documentation:
 
     EXTRA_INSTALL="numpy pybind11"
     build_py_project_in_venv
+
+    # https://github.com/sphinx-doc/sphinx/issues/9200
+    CI_SUPPORT_SPHINX_VERSION_SPECIFIER="!=4.0.0"
+
     build_docs
     maybe_upload_docs
   tags:
