CI Tests on MacoS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,12 +24,13 @@ jobs:
                 . ./prepare-and-run-flake8.sh  "$(basename $GITHUB_REPOSITORY)" test examples
 
     pytest:
-        name: Pytest on Py${{ matrix.python-version }}
-        runs-on: ubuntu-latest
+        name: Pytest on Py${{ matrix.python-version }} {{ matrix.os }}
+        runs-on: {{ matrix.os }}
         strategy:
             matrix:
                 # For some reason, the Silo build doesn't succeed on 3.6?
                 python-version: [3.7, 3.x]
+                os: [ubuntu-latest, macos-latest]
         steps:
         -   uses: actions/checkout@v2
         -
@@ -47,11 +48,12 @@ jobs:
                 test_py_project
 
     examples:
-        name: Examples on Py${{ matrix.python-version }}
-        runs-on: ubuntu-latest
+        name: Examples on Py${{ matrix.python-version }} {{ matrix.os }}
+        runs-on: {{ matrix.os }}
         strategy:
             matrix:
                 python-version: [3.6, 3.x]
+                os: [ubuntu-latest, macos-latest]
         steps:
         -   uses: actions/checkout@v2
         -
