Drop insecure (-k) flags from curl

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
                 python-version: '3.8'
         -   name: "Main Script"
             run: |
-                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/main/prepare-and-run-flake8.sh
+                curl -L -O https://gitlab.tiker.net/inducer/ci-support/raw/main/prepare-and-run-flake8.sh
                 . ./prepare-and-run-flake8.sh  "$(basename $GITHUB_REPOSITORY)" test examples
 
     pytest:
@@ -45,7 +45,7 @@ jobs:
                     rm test/test_silo.py
                 fi
                 EXTRA_INSTALL="numpy pybind11"
-                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/main/ci-support.sh
+                curl -L -O https://gitlab.tiker.net/inducer/ci-support/raw/main/ci-support.sh
                 . ./ci-support.sh
                 ./configure.py $USE_SILO
                 build_py_project_in_venv
@@ -74,7 +74,7 @@ jobs:
                     USE_SILO="--use-silo"
                 fi
                 EXTRA_INSTALL="numpy pybind11"
-                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/main/ci-support.sh
+                curl -L -O https://gitlab.tiker.net/inducer/ci-support/raw/main/ci-support.sh
                 . ./ci-support.sh
                 ./configure.py $USE_SILO
                 build_py_project_in_venv
@@ -93,7 +93,7 @@ jobs:
             run: |
                 ./.ci/install-silo-on-github.sh
                 EXTRA_INSTALL="numpy pybind11"
-                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/main/ci-support.sh
+                curl -L -O https://gitlab.tiker.net/inducer/ci-support/raw/main/ci-support.sh
                 . ./ci-support.sh
                 ./configure.py --use-silo
                 build_py_project_in_venv
