apply isort over the codebase

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,11 @@ docstring-quotes = """
 multiline-quotes = """
 
 # enable-flake8-bugbear
+
+[isort]
+known_firstparty=pytools
+known_local_folder=pyvisfile
+line_length = 85
+lines_after_imports = 2
+combine_as_imports = True
+multi_line_output = 4
