--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,11 @@ line_length = 85
 lines_after_imports = 2
 combine_as_imports = True
 multi_line_output = 4
+
+[mypy]
+python_version = 3.8
+hide_error_codes = false
+warn_unused_ignores = True
+
+[mypy-pyvisfile.silo._internal.*]
+ignore_missing_imports = True
