--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,20 +8,18 @@ on:
         - cron:  '17 3 * * 0'
 
 jobs:
-    flake8:
-        name: Flake8
+    ruff:
+        name: Ruff
         runs-on: ubuntu-latest
         steps:
         -   uses: actions/checkout@v4
-        -
-            uses: actions/setup-python@v5
             with:
-                # matches compat target in setup.py
-                python-version: '3.8'
+                submodules: true
+        -   uses: actions/setup-python@v5
         -   name: "Main Script"
             run: |
-                curl -L -O https://gitlab.tiker.net/inducer/ci-support/raw/main/prepare-and-run-flake8.sh
-                . ./prepare-and-run-flake8.sh  "$(basename $GITHUB_REPOSITORY)" test examples
+                pip install ruff
+                ruff check
 
     pytest:
         name: Pytest on Py${{ matrix.python-version }} ${{ matrix.os }}
@@ -37,17 +35,19 @@ jobs:
             with:
                 python-version: ${{ matrix.python-version }}
         -   name: "Main Script"
+            env:
+                OS_NAME: ${{ matrix.os }}
             run: |
-                if [[ $(uname) == "Linux" ]]; then
+                EXTRA_INSTALL="numpy pybind11 meson-python ninja"
+                PROJECT_INSTALL_FLAGS="--no-build-isolation"
+                if [[ "$OS_NAME" == ubuntu-* ]]; then
                     ./.ci/install-silo-on-github.sh
-                    USE_SILO="--use-silo"
-                else
-                    rm test/test_silo.py
+                    PROJECT_INSTALL_FLAGS+=" --config-settings setup-args=-Duse-silo=true"
                 fi
-                EXTRA_INSTALL="numpy pybind11"
-                curl -L -O https://gitlab.tiker.net/inducer/ci-support/raw/main/ci-support.sh
-                . ./ci-support.sh
-                ./configure.py $USE_SILO
+
+                curl -L -O https://tiker.net/ci-support-v0
+                . ci-support-v0
+
                 build_py_project_in_venv
                 test_py_project
 
@@ -62,9 +62,12 @@ jobs:
                 python-version: '3.x'
         -   name: "Main Script"
             run: |
-                EXTRA_INSTALL="numpy mypy pytest"
+                EXTRA_INSTALL="numpy pybind11 meson-python ninja mypy pytest"
+                PROJECT_INSTALL_FLAGS="--no-build-isolation"
+
                 curl -L -O https://tiker.net/ci-support-v0
-                . ./ci-support-v0
+                . ci-support-v0
+
                 build_py_project_in_venv
                 python -m mypy "$(basename $GITHUB_REPOSITORY)" test
 
@@ -82,20 +85,21 @@ jobs:
             with:
                 python-version: ${{ matrix.python-version }}
         -   name: "Main Script"
+            env:
+                OS_NAME: ${{ matrix.os }}
             run: |
-                # not expected to run without matplotlib and vtk
-                rm examples/vtk-sample-elements.py
-
-                if [[ $(uname) == "Linux" ]]; then
+                EXTRA_INSTALL="numpy pybind11 meson-python ninja"
+                PROJECT_INSTALL_FLAGS="--no-build-isolation"
+                if [[ "$OS_NAME" == ubuntu-* ]]; then
                     ./.ci/install-silo-on-github.sh
-                    USE_SILO="--use-silo"
+                    PROJECT_INSTALL_FLAGS+=" --config-settings setup-args=-Duse-silo=true"
                 fi
-                EXTRA_INSTALL="numpy pybind11"
-                curl -L -O https://gitlab.tiker.net/inducer/ci-support/raw/main/ci-support.sh
-                . ./ci-support.sh
-                ./configure.py $USE_SILO
+
+                curl -L -O https://tiker.net/ci-support-v0
+                . ci-support-v0
+
                 build_py_project_in_venv
-                run_examples
+                run_examples --no-require-main
 
     docs:
         name: Documentation
@@ -108,11 +112,13 @@ jobs:
                 python-version: '3.x'
         -   name: "Main Script"
             run: |
+                EXTRA_INSTALL="numpy pybind11 meson-python ninja"
+                PROJECT_INSTALL_FLAGS="--no-build-isolation --config-settings setup-args=-Duse-silo=true"
                 ./.ci/install-silo-on-github.sh
-                EXTRA_INSTALL="numpy pybind11"
-                curl -L -O https://gitlab.tiker.net/inducer/ci-support/raw/main/ci-support.sh
-                . ./ci-support.sh
-                ./configure.py --use-silo
+
+                curl -L -O https://tiker.net/ci-support-v0
+                . ci-support-v0
+
                 build_py_project_in_venv
                 build_docs
 
