--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,15 @@ include = [
     "pyvisfile*",
 ]
 
+[tool.setuptools.package-dir]
+# https://github.com/Infleqtion/client-superstaq/pull/715
+"" = "."
+
+[tool.setuptools.package-data]
+pyvisfile = [
+    "py.typed",
+]
+
 [project.urls]
 Documentation = "https://documen.tician.de/pyvisfile"
 Homepage = "https://mathema.tician.de/software/pyvisfile"
