add ignore for ruff C409 rule

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,7 @@ extend-select = [
 ]
 extend-ignore = [
     "B028", # no explicit stacklevel in warnings
+    "C409", # remove comprehension within tuple call
     "C90",  # McCabe complexity
     "E226", # missing whitespace around arithmetic operator
     "E241", # multiple spaces after comma
