--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ extend-select = [
     "F",    # pyflakes
     "G",    # flake8-logging-format
     "N",    # pep8-naming
+    "NPY",  # numpy
     "Q",    # flake8-quotes
     "RUF",  # ruff
     "SIM",  # flake8-simplify
