Add typos CI, fix typos

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,13 @@ jobs:
                 pip install ruff
                 ruff check
 
+    typos:
+        name: Typos
+        runs-on: ubuntu-latest
+        steps:
+        -   uses: actions/checkout@v4
+        -   uses: crate-ci/typos@master
+
     pytest:
         name: Pytest on Py${{ matrix.python-version }} ${{ matrix.os }}
         runs-on: ${{ matrix.os }}
