--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,3 +109,8 @@ python_version = "3.10"
 strict = true
 hide_error_codes = false
 warn_unused_ignores = true
+
+[tool.typos.default]
+extend-ignore-re = [
+  "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
+]
