--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,6 @@
 [build-system]
-build-backend = "setuptools.build_meta"
-requires = [
-    "setuptools>=63",
-]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "pyvisfile"
@@ -44,20 +42,6 @@ test = [
     "mypy",
     "pytest",
     "ruff",
-]
-
-[tool.setuptools.packages.find]
-include = [
-    "pyvisfile*",
-]
-
-[tool.setuptools.package-dir]
-# https://github.com/Infleqtion/client-superstaq/pull/715
-"" = "."
-
-[tool.setuptools.package-data]
-pyvisfile = [
-    "py.typed",
 ]
 
 [project.urls]
