Restrict Github doc run to 3.12 for Sphinx bug
https://github.com/sphinx-doc/sphinx/issues/13178

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,7 +101,8 @@ jobs:
         -
             uses: actions/setup-python@v5
             with:
-                python-version: '3.x'
+                # https://github.com/sphinx-doc/sphinx/issues/13178
+                python-version: '3.12'
         -   name: "Main Script"
             run: |
                 curl -L -O https://tiker.net/ci-support-v0
