--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "pyvisfile"
 version = "2024.2"
 description = "Large-scale Visualization Data Storage"
 readme = "README.rst"
-license = { text = "MIT" }
+license = "MIT"
 authors = [ { name = "Andreas Kloeckner", email = "inform@tiker.net" } ]
 requires-python = ">=3.10"
 classifiers = [
@@ -15,7 +15,6 @@ classifiers = [
     "Intended Audience :: Developers",
     "Intended Audience :: Other Audience",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
     "Programming Language :: C++",
     "Programming Language :: Python",
