--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
 dependencies = [
     "numpy",
     "pytools>=2022.1",
+    "typing_extensions>=4.6"
 ]
 
 [project.optional-dependencies]
@@ -87,13 +88,48 @@ known-local-folder = ["pyfmmlib"]
 lines-after-imports = 2
 combine-as-imports = true
 
-[tool.mypy]
-python_version = "3.10"
-strict = true
-hide_error_codes = false
-warn_unused_ignores = true
-
 [tool.typos.default]
 extend-ignore-re = [
   "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
 ]
+
+[tool.basedpyright]
+reportImplicitStringConcatenation = "none"
+reportUnnecessaryIsInstance = "none"
+reportUnusedCallResult = "none"
+reportExplicitAny = "none"
+reportPrivateUsage = "none"
+
+# Multiple reasons for this:
+# - make_subst_func is reported as having an incomplete type (but only in CI?)
+# - numpy scalar types are reported as incomplete (because of "any" precision)
+reportUnknownVariableType = "none"
+
+reportUnreachable = "hint"
+reportUnnecessaryComparison = "hint"
+
+# This reports even cycles that are qualified by 'if TYPE_CHECKING'. Not what
+# we care about at this moment.
+# https://github.com/microsoft/pyright/issues/746
+reportImportCycles = "none"
+
+pythonVersion = "3.10"
+pythonPlatform = "All"
+
+exclude = [
+    "doc",
+    ".env",
+    ".conda-root",
+    "examples",
+]
+
+[[tool.basedpyright.executionEnvironments]]
+root = "test"
+reportUnknownArgumentType = "none"
+reportUnknownVariableType = "none"
+reportUnknownMemberType = "hint"
+reportMissingParameterType = "none"
+reportAttributeAccessIssue = "none"
+reportMissingImports = "none"
+reportArgumentType = "hint"
+reportAny = "hint"
