--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,14 +68,15 @@ extend-select = [
     "E",    # pycodestyle
     "F",    # pyflakes
     "G",    # flake8-logging-format
+    "I",    # flake8-isort
     "N",    # pep8-naming
     "NPY",  # numpy
     "Q",    # flake8-quotes
     "RUF",  # ruff
     "SIM",  # flake8-simplify
+    "TC",   # flake8-type-checking
     "UP",   # pyupgrade
     "W",    # pycodestyle
-    "TC",
 ]
 extend-ignore = [
     "B028", # no explicit stacklevel in warnings
@@ -94,7 +95,7 @@ multiline-quotes = "double"
 
 [tool.ruff.lint.isort]
 known-first-party = ["pytools"]
-known-local-folder = ["pyfmmlib"]
+known-local-folder = ["pyvisfile"]
 lines-after-imports = 2
 combine-as-imports = true
 required-imports = ["from __future__ import annotations"]
