Update config, fix lints for ruff 0.15.2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,7 +87,12 @@ extend-ignore = [
     "E265",   # comment should have a space
     "E402",   # module level import not at the top of file
     "RUF067", # no code in __init__ *shrug*
+    "TRY004",
 ]
+
+[tool.ruff.lint.per-file-ignores]
+"test/test_*.py" = ["S102"]
+"doc/conf.py" = ["S102", "DTZ002"]
 
 [tool.ruff.lint.flake8-quotes]
 docstring-quotes = "double"
